<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#090E21"
    android:padding="@dimen/_10sdp"
    tools:context=".Activities.SpecifCountryActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardBackgroundColor="#242738"
                    android:layout_height="@dimen/_115sdp"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:contentPadding="@dimen/_3sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/total_cases_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo"
                            android:gravity="center"
                            android:text="@string/total_cases"
                            android:textColor="#686B7C"
                            android:textSize="@dimen/_23sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/total_cases_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_30sdp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardBackgroundColor="#242738"
                    app:cardUseCompatPadding="true"
                    android:layout_height="@dimen/_115sdp"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:contentPadding="@dimen/_3sdp"
                    app:cardElevation="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/total_deaths_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo"
                            android:gravity="center"
                            android:text="@string/total_deaths"
                            android:textColor="#686B7C"
                            android:textSize="@dimen/_23sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/total_deaths_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_30sdp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardBackgroundColor="#242738"
                    app:cardUseCompatPadding="true"
                    android:layout_height="@dimen/_115sdp"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:contentPadding="@dimen/_3sdp"
                    app:cardElevation="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/today_cases_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo"
                            android:gravity="center"
                            android:text="@string/today_cases"
                            android:textColor="#686B7C"
                            android:textSize="@dimen/_23sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/today_cases_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_30sdp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardBackgroundColor="#242738"
                    app:cardUseCompatPadding="true"
                    android:layout_height="@dimen/_115sdp"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:contentPadding="@dimen/_3sdp"
                    app:cardElevation="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/today_deaths_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo"
                            android:gravity="center"
                            android:text="@string/today_deaths"
                            android:textColor="#686B7C"
                            android:textSize="@dimen/_23sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/today_deaths_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_30sdp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardBackgroundColor="#242738"
                    app:cardUseCompatPadding="true"
                    android:layout_height="@dimen/_115sdp"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:contentPadding="@dimen/_3sdp"
                    app:cardElevation="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/total_recovered_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo"
                            android:gravity="center"
                            android:text="@string/total_recovered"
                            android:textColor="#686B7C"
                            android:textSize="@dimen/_23sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/total_recovered_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_30sdp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardBackgroundColor="#242738"
                    app:cardUseCompatPadding="true"
                    android:layout_height="@dimen/_115sdp"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:contentPadding="@dimen/_3sdp"
                    app:cardElevation="@dimen/_2sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/still_active_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo"
                            android:gravity="center"
                            android:text="@string/still_active"
                            android:textColor="#686B7C"
                            android:textSize="@dimen/_23sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/still_active_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/_30sdp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>